[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://src/ui/dc_requirements_panel.gd" id="1_dc_req"]

[node name="DCRequirementsPanel" type="PanelContainer"]
visible = false
offset_left = 230.0
offset_top = 200.0
offset_right = 450.0
offset_bottom = 400.0
script = ExtResource("1_dc_req")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 5

[node name="TitleLabel" type="Label" parent="VBox"]
layout_mode = 2
text = "Tier 1 Requirements"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBox"]
layout_mode = 2

[node name="RequirementsContainer" type="VBoxContainer" parent="VBox"]
layout_mode = 2
theme_override_constants/separation = 3
